Fix collapse

--- a/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
+++ b/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
@@ -56,6 +56,7 @@
     background-color: white;
     padding: 40px 40px 15px 40px;
     max-width: 290px;
+    min-height: 315px;
 
     -webkit-box-shadow: 0px 0px 41px 1px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 0px 41px 1px rgba(0,0,0,0.2);
